--- a/to-do-list.ipynb
+++ b/to-do-list.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----WELCOME TO THE TASK MANAGEMENT APP----\n"
+      "----WELCOME TO THE TASK MANAGER----\n"
      ]
     },
     {
